<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/app_signup_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_subtitile" />

        <EditText
            android:id="@+id/inputNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_email_subtitile" />

        <EditText
            android:id="@+id/inputEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_password_subtitile" />

        <EditText
            android:id="@+id/inputPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/primary_blue"
            android:fontFamily="@font/montserrat_semibold"
            android:onClick="newUser"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/app_btn_signup"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_already_signin"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>